// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTransportBarNumbersArray correctly adjusts for different sectionBars values 1`] = `
Array [
  Object {
    "barNumber": 0,
    "xPos": 0,
  },
  Object {
    "barNumber": 1,
    "xPos": 384,
  },
]
`;

exports[`createTransportBarNumbersArray correctly adjusts for different sectionStart values 1`] = `
Array [
  Object {
    "barNumber": 2,
    "xPos": 0,
  },
  Object {
    "barNumber": 3,
    "xPos": 384,
  },
  Object {
    "barNumber": 4,
    "xPos": 768,
  },
  Object {
    "barNumber": 5,
    "xPos": 1152,
  },
]
`;

exports[`createTransportBarNumbersArray correctly creates the transport bar numbers array 1`] = `
Array [
  Object {
    "barNumber": 0,
    "xPos": 0,
  },
  Object {
    "barNumber": 1,
    "xPos": 384,
  },
  Object {
    "barNumber": 2,
    "xPos": 768,
  },
  Object {
    "barNumber": 3,
    "xPos": 1152,
  },
]
`;
